<resources>
    <string name="app_name">Practica4</string>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueeria los Portales is a quick, casual restaurant.</string>
    <string name="button_start">get Started!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="custom">Custom</string>

    <string name="antojitos">antojitos</string>
    <string name="especialidades">especialidades</string>
    <string name="combinaciones">combinaciones</string>
    <string name="tortas">tortas</string>
    <string name="sopas">sopas</string>
    <string name="bebidas">bebidas</string>

</resources>