<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity = "center"
        app:srcCompat="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@string/terms"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:text="@string/sign_in"
        android:textColor ="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"/>

</LinearLayout>