<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/grupo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp">

        <Button
            android:text="@string/antojitos"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_cold_drinks" />

        <Button
            android:text="@string/especialidades"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_hot_drinks" />

        <Button
            android:text="@string/combinaciones"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_combinaciones" />

        <Button
            android:text="@string/tortas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_tortas" />

        <Button
            android:text="@string/sopas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_sopas" />

        <Button
            android:text="@string/bebidas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:layout_marginRight="@dimen/menu_buttons_margins"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:id="@+id/button_bebidas" />

    </GridLayout>

</LinearLayout>